3/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region = var.aws_region
}

# fetch default VPC
data "aws_vpc" "default" {
  default = true
}

# fetch official Ubuntu 22.04 LTS Image
data "aws_ami" "sam" {
  most_recent = true
  owners      = ["099720109477"]

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

# Upload local RSA SSH Key to AWS
resource "aws_key_pair" "deployer" {
  key_name   = "opentofu-assignment-key"
  public_key = file(var.ssh_public_key_path)
}

# Firewall rule
resource "aws_security_group" "web_sg" {
  name        = "allow_web_ssh"
  description = "Allow inbound HTTP (port 80) and SSH (port 22)"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    description = "HTTP from anywhere"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH from anywhere"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Virtual Machine Instance (EC2)
resource "aws_instance" "web_server" {
  ami                    = data.aws_ami.sam.id
  instance_type          = var.instance_type
  key_name               = aws_key_pair.deployer.key_name
  vpc_security_group_ids = [aws_security_group.web_sg.id]

  # Startup script to install Nginx using Ubuntu apt package manager
  user_data = <<-EOF
              #!/bin/bash
              apt-get update -y
              apt-get install -y nginx
              systemctl start nginx
              systemctl enable nginx
              echo "<h1>Hello, Open Tofu</h1>" > /var/www/html/index.html
              EOF

  tags = {
    Name = "OpenTofu-Assignment-Bobobox"
  }
}
